# RimRust

./: .gitignore  CLAUDE.md  auto-imports.d.ts  components.d.ts  package.json  pnpm-lock.yaml  readme.md  tsconfig.json  tsconfig.node.json  vite.config.ts
full_loading_screen/: FullLoadingScreen.vue  index.html  main.ts
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: background_task.rs  file.rs  func.rs  lib.rs  main.rs  mods.rs  types.rs
src-tauri/src/file/: reader.rs  types.rs  watcher.rs  xml.rs
src-tauri/src/mods/: base_list.rs  community_data.rs  scan.rs  search.rs  sort.rs  storage.rs  translate.rs  xml.rs
src-tauri/src/mods/community_data/: community_rules.rs  steam_db.rs
src-tauri/src/mods/search/: advance.rs  basic.rs
src-tauri/src/mods/search/advance/: collector.rs  index.rs  tokenizer.rs
src-tauri/src/mods/translate/: auto_translate.rs  identifier.rs  index.rs  matcher.rs  rules.rs
src-tauri/src/steamacf/: lib.rs  parse.rs
src-tauri/src/types/: common.rs  pre_define.rs  priority_mutex.rs
src/api/: tauriFunc.ts  types.ts
src/components/: Loading.vue
src/components/footer/: Footer.vue  TaskList.vue
src/components/header/: Config.vue  EditUserOrder.vue  Main.vue  UserOrder.vue
src/components/main/: History.vue  InfoCard.vue  MainContext.vue  dragFunc.ts
src/components/main/list/: ItemMod.vue  ModList.vue
src/components/main/list/EnableModList/: EnableModList.vue  ErrorInfo.vue  QuickFix.vue  WarningInfo.vue  index.ts
src/components/main/translation/: drawer.vue  overview.vue
src/components/utils/components/: ButtonCheckbox.vue  Highlight.vue  MiniInfoCard.vue  MiniInfoCardForSteamdb.vue  PreviewImg.vue  VirtualList.vue  VirtualListInterface.ts  VirtualListItem.vue
src/components/utils/func/: modOperation.ts  textWidth.ts
src/components/utils/store/: baseList.ts  drag.ts  index.ts
