[package]
name = "rimrust"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rimrust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
uuid = {version = "1", features = ["v4"] }
bincode = { version = "2.0.1", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
tokio = { version = "1", features = ["full"] }
chrono = {version = "0.4", features = ["serde"] }
log = "0.4"
tauri-plugin-log = "2"
async-recursion = "1"
futures = "0.3"
quick-xml = {version = "0.37", features = ["serialize", "serde-types"] }
notify = "8"
notify-debouncer-full = "0.5"
tauri-plugin-dialog = "2"
regex = "1"
strsim = "0.11"
toml = "0.8"
parking_lot = "0.12.3"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "ansi", "registry"] }
tracing-appender = "0.2"
tracing-futures = "0.2"
tantivy = "0.22"
tantivy-jieba = "0.11"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-process = "2"
encoding_rs = "0.8"
charset-normalizer-rs = "1"
dashmap = "6"
jieba-rs = "0.7"
ngrams = "1.0.1"
rust-stemmers = "1"
lru = "0.13"
ahash = "0.8"
deeplx = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
